--- a/flutter_launcher_icons.yaml
+++ b/flutter_launcher_icons.yaml
@@ -1,6 +1,6 @@
 # flutter pub run flutter_launcher_icons
 flutter_launcher_icons:
-  image_path: "assets/logo_with_bg.png"
+  image_path: "assets/logo.png"
 
   android: "ic_launcher"
   min_sdk_android: 21 # android min sdk min:16, default 21
@@ -9,6 +9,7 @@ flutter_launcher_icons:
   adaptive_icon_monochrome: "assets/logo_with_bg.png"
 
   ios: true
+  image_path_ios: "assets/logo_with_bg.png"
   # image_path_ios: "assets/icon/icon.png"
   remove_alpha_channel_ios: true
   # image_path_ios_dark_transparent: "assets/icon/icon_dark.png"
@@ -18,12 +19,12 @@ flutter_launcher_icons:
   web:
     generate: true
     image_path: "assets/logo_with_bg.png"
-    background_color: "#e2e3e4"
-    theme_color: "#e2e3e4"
+    background_color: "#88a6b3"
+    theme_color: "#88a6b3"
 
   windows:
     generate: true
-    image_path: "assets/logo_with_bg.png"
+    image_path: "assets/logo.png"
     icon_size: 48
 
   macos:
